--- a/regex.ipynb
+++ b/regex.ipynb
@@ -110,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 552,
+   "execution_count": 554,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        "['210-867-5309']"
       ]
      },
-     "execution_count": 552,
+     "execution_count": 554,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -131,8 +131,294 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 553,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['210-867-5309']"
+      ]
+     },
+     "execution_count": 553,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ph = '210-867-5309'\n",
+    "match = re.findall(r'\\d?\\d?\\d?\\D*?[\\s?.?-?]?\\d{3}[\\s.-]\\d{4}$', ph)\n",
+    "match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 555,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['867-5309']"
+      ]
+     },
+     "execution_count": 555,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ph = '867-5309'\n",
+    "match = re.findall(r'\\d?\\d?\\d?\\D*?[\\s?.?-?]?\\d{3}[\\s.-]\\d{4}$', ph)\n",
+    "match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 556,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['210) 867 5309']"
+      ]
+     },
+     "execution_count": 556,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ph = '(210) 867 5309'\n",
+    "match = re.findall(r'\\d?\\d?\\d?\\D*?[\\s?.?-?]?\\d{3}[\\s.-]\\d{4}$', ph)\n",
+    "match"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
+   "source": [
+    "#### Use regular expressions to convert the dates below to the standardized year-month-day format.\n",
+    "\n",
+    "\n",
+    "02/04/19\\\n",
+    "02/05/19\\\n",
+    "02/06/19\\\n",
+    "02/07/19\\\n",
+    "02/08/19\\\n",
+    "02/09/19\\\n",
+    "02/10/19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 560,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'19/02/02'"
+      ]
+     },
+     "execution_count": 560,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date = '02/02/19'\n",
+    "formatted_date = re.sub(r'(\\d{2})/(\\d{2})/(\\d{2})', r'\\3/\\1/\\2', date)\n",
+    "formatted_date"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Write a regex to extract the various parts of these logfile lines:\n",
+    "\n",
+    "\n",
+    "GET /api/v1/sales?page=86 [16/Apr/2019:193452+0000] HTTP/1.1 {200} 510348 \"python-requests/2.21.0\" 97.105.19.58\\\n",
+    "POST /users_accounts/file-upload [16/Apr/2019:193452+0000] HTTP/1.1 {201} 42 \"User-Agent: Mozilla/5.0 (X11; Fedora; Fedora; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.86 Safari/537.36\" 97.105.19.58\\\n",
+    "GET /api/v1/items?page=3 [16/Apr/2019:193453+0000] HTTP/1.1 {429} 3561 \"python-requests/2.21.0\" 97.105.19.58"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 571,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "log_file_lines = '''GET /api/v1/sales?page=86 [16/Apr/2019:193452+0000] HTTP/1.1 {200} 510348 \"python-requests/2.21.0\" 97.105.19.58\n",
+    "POST /users_accounts/file-upload [16/Apr/2019:193452+0000] HTTP/1.1 {201} 42 \"User-Agent: Mozilla/5.0 (X11; Fedora; Fedora; Linux x86_64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/73.0.3683.86 Safari/537.36\" 97.105.19.58\n",
+    "GET /api/v1/items?page=3 [16/Apr/2019:193453+0000] HTTP/1.1 {429} 3561 \"python-requests/2.21.0\" 97.105.19.58'''"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 572,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lines = pd.Series(log_file_lines.strip().split('\\n'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 577,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0    GET /api/v1/sales?page=86 [16/Apr/2019:193452+...\n",
+       "1    POST /users_accounts/file-upload [16/Apr/2019:...\n",
+       "2    GET /api/v1/items?page=3 [16/Apr/2019:193453+0...\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 577,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "lines"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 579,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Request_info</th>\n",
+       "      <th>destination</th>\n",
+       "      <th>date_time</th>\n",
+       "      <th>HTTP</th>\n",
+       "      <th>status_code</th>\n",
+       "      <th>something</th>\n",
+       "      <th>user_agent</th>\n",
+       "      <th>ip</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>GET</td>\n",
+       "      <td>/api/v1/sales?page=86</td>\n",
+       "      <td>16/Apr/2019:193452+0000</td>\n",
+       "      <td>HTTP/1.1</td>\n",
+       "      <td>200</td>\n",
+       "      <td>510348</td>\n",
+       "      <td>python-requests/2.21.0</td>\n",
+       "      <td>97.105.19.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>POST</td>\n",
+       "      <td>/users_accounts/file-upload</td>\n",
+       "      <td>16/Apr/2019:193452+0000</td>\n",
+       "      <td>HTTP/1.1</td>\n",
+       "      <td>201</td>\n",
+       "      <td>42</td>\n",
+       "      <td>User-Agent: Mozilla/5.0 (X11; Fedora; Fedora; ...</td>\n",
+       "      <td>97.105.19.58</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>GET</td>\n",
+       "      <td>/api/v1/items?page=3</td>\n",
+       "      <td>16/Apr/2019:193453+0000</td>\n",
+       "      <td>HTTP/1.1</td>\n",
+       "      <td>429</td>\n",
+       "      <td>3561</td>\n",
+       "      <td>python-requests/2.21.0</td>\n",
+       "      <td>97.105.19.58</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  Request_info                  destination                date_time  \\\n",
+       "0          GET        /api/v1/sales?page=86  16/Apr/2019:193452+0000   \n",
+       "1         POST  /users_accounts/file-upload  16/Apr/2019:193452+0000   \n",
+       "2          GET         /api/v1/items?page=3  16/Apr/2019:193453+0000   \n",
+       "\n",
+       "       HTTP status_code something  \\\n",
+       "0  HTTP/1.1         200    510348   \n",
+       "1  HTTP/1.1         201        42   \n",
+       "2  HTTP/1.1         429      3561   \n",
+       "\n",
+       "                                          user_agent            ip  \n",
+       "0                             python-requests/2.21.0  97.105.19.58  \n",
+       "1  User-Agent: Mozilla/5.0 (X11; Fedora; Fedora; ...  97.105.19.58  \n",
+       "2                             python-requests/2.21.0  97.105.19.58  "
+      ]
+     },
+     "execution_count": 579,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "regexp = r'''\n",
+    "^\n",
+    "(?P<Request_info>.+)\n",
+    "\\s\n",
+    "(?P<destination>.+)\n",
+    "\\s\n",
+    "\\[\n",
+    "(?P<date_time>.+?)\n",
+    "\\]\n",
+    "\\s\n",
+    "(?P<HTTP>.+)\n",
+    "\\s\n",
+    "\\{\n",
+    "(?P<status_code>.+)\n",
+    "\\}\n",
+    "\\s\n",
+    "(?P<something>.+?)\n",
+    "\\s\n",
+    "\"\n",
+    "(?P<user_agent>.+)\n",
+    "\"\n",
+    "\\s\n",
+    "(?P<ip>\\d\\d{1,3}\\.\\d{1,3}\\.\\d{1,3}\\.\\d{1,3})\n",
+    "$\n",
+    "'''\n",
+    "pd.Series(lines).str.extract(regexp, re.VERBOSE)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
    "source": []
   },
   {
