--- a/regex.ipynb
+++ b/regex.ipynb
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 655,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 656,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "False"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 656,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -110,29 +110,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 554,
+   "execution_count": 597,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['210-867-5309']"
+       "['210.867.5309']"
       ]
      },
-     "execution_count": 554,
+     "execution_count": 597,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "ph = '+1 210-867-5309'\n",
+    "ph = '+1 210.867.5309'\n",
     "match = re.findall(r'\\d?\\d?\\d?\\D*?[\\s?.?-?]?\\d{3}[\\s.-]\\d{4}$', ph)\n",
     "match"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 553,
+   "execution_count": 614,
    "metadata": {},
    "outputs": [
     {
@@ -141,20 +141,20 @@
        "['210-867-5309']"
       ]
      },
-     "execution_count": 553,
+     "execution_count": 614,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ph = '210-867-5309'\n",
-    "match = re.findall(r'\\d?\\d?\\d?\\D*?[\\s?.?-?]?\\d{3}[\\s.-]\\d{4}$', ph)\n",
+    "match = re.findall(r'[\\(]?\\d?\\d?\\d?\\D*?[\\s?.?-?]?\\d{3}[\\s.-]\\d{4}$', ph)\n",
     "match"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 555,
+   "execution_count": 615,
    "metadata": {},
    "outputs": [
     {
@@ -163,36 +163,36 @@
        "['867-5309']"
       ]
      },
-     "execution_count": 555,
+     "execution_count": 615,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ph = '867-5309'\n",
-    "match = re.findall(r'\\d?\\d?\\d?\\D*?[\\s?.?-?]?\\d{3}[\\s.-]\\d{4}$', ph)\n",
+    "match = re.findall(r'[\\(]?\\d?\\d?\\d?\\D*?[\\s?.?-?]?\\d{3}[\\s.-]\\d{4}$', ph)\n",
     "match"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 616,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['210) 867 5309']"
+       "['(210) 867 5309']"
       ]
      },
-     "execution_count": 556,
+     "execution_count": 616,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "ph = '(210) 867 5309'\n",
-    "match = re.findall(r'\\d?\\d?\\d?\\D*?[\\s?.?-?]?\\d{3}[\\s.-]\\d{4}$', ph)\n",
+    "match = re.findall(r'[\\(]?\\d?\\d?\\d?\\D*?[\\s?.?-?]?\\d{3}[\\s.-]\\d{4}$', ph)\n",
     "match"
    ]
   },
@@ -415,11 +415,467 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### You can find a list of words on your mac at /usr/share/dict/words. Use this file to answer the following questions:\n",
+    "\n",
+    "How many words have at least 3 vowels?\\\n",
+    "How many words have at least 3 vowels in a row?\\\n",
+    "How many words have at least 4 consonants in a row?\\\n",
+    "How many words start and end with the same letter?\\\n",
+    "How many words start and end with a vowel?\\\n",
+    "How many words contain the same letter 3 times in a row?\\\n",
+    "What other interesting patterns in words can you find?"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 617,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "with open('/usr/share/dict/words') as f:\n",
+    "    words = f.read().split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 649,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "words = pd.Series(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 710,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#function using python\n",
+    "\n",
+    "def count_vowels(words):\n",
+    "    list = []\n",
+    "    for word in words:\n",
+    "        count = 0\n",
+    "        for i in word:\n",
+    "            if is_vowel(i) == True:\n",
+    "                count = count+1\n",
+    "        if count >= 3:\n",
+    "            list.append(word)\n",
+    "    return list\n",
+    "            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 712,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def count_vowels_reg(words):\n",
+    "    list = []\n",
+    "    for word in words:\n",
+    "        count = 0\n",
+    "        for i in word:\n",
+    "            if re.search(r'[aeiouAEIOU]', i) != None:\n",
+    "                count = count+1\n",
+    "        if count >= 3:\n",
+    "            list.append(word)\n",
+    "    return list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 714,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "191365"
+      ]
+     },
+     "execution_count": 714,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#How many words have at least 3 vowels (using regex)\n",
+    "len(count_vowels_reg(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 715,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "191365"
+      ]
+     },
+     "execution_count": 715,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#How many words have at least 3 vowels? (using base python)\n",
+    "len(count_vowels(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 678,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#How many words have at least 3 vowels in a row?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 688,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vowels_3row(words):\n",
+    "    list = []\n",
+    "    for word in words:\n",
+    "        count = 0\n",
+    "        for i in range(0,len(word[0:-2])):\n",
+    "            if (is_vowel(word[i]) == True) and (is_vowel(word[i+1]) == True) and (is_vowel(word[i+2]) == True):\n",
+    "                count = count+1\n",
+    "        if count >0:\n",
+    "            list.append(word)\n",
+    "    return list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 717,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vowels_3row_reg(words):\n",
+    "    list = []\n",
+    "    for word in words:\n",
+    "        if re.search(r'[aeiouAEIOU]{3}', word) != None:\n",
+    "            list.append(word)\n",
+    "    return list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 691,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6182"
+      ]
+     },
+     "execution_count": 691,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using base python\n",
+    "len(vowels_3row(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 719,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6182"
+      ]
+     },
+     "execution_count": 719,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using regex\n",
+    "len(vowels_3row_reg(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 722,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#How many words have at least 4 consonants in a row?\n",
+    "\n",
+    "def consonants_4row(words):\n",
+    "    list = []\n",
+    "    for word in words:\n",
+    "        count = 0\n",
+    "        for i in range(0,len(word[0:-3])):\n",
+    "            if (is_vowel(word[i]) == False) and (is_vowel(word[i+1]) == False) and (is_vowel(word[i+2]) == False)and (is_vowel(word[i+3]) == False):\n",
+    "                count = count+1\n",
+    "        if count >0:\n",
+    "            list.append(word)\n",
+    "    return list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 721,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def consonants_4row_reg(words):\n",
+    "    list = []\n",
+    "    for word in words:\n",
+    "        if re.search(r'[^aeiouAEIOU]{4,}', word) != None:\n",
+    "            list.append(word)\n",
+    "    return list\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 723,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19241"
+      ]
+     },
+     "execution_count": 723,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using base python\n",
+    "len(consonants_4row(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 726,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19241"
+      ]
+     },
+     "execution_count": 726,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Using regex\n",
+    "len(consonants_4row_reg(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 729,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#How many words start and end with the same letter?\n",
+    "def start_end_same(words):\n",
+    "    list = []\n",
+    "    for word in words:\n",
+    "        count = 0\n",
+    "        if word[0] == word[-1]:\n",
+    "            list.append(word)\n",
+    "    return list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 761,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def start_end_same_reg(words):\n",
+    "    list = []\n",
+    "    for word in words:\n",
+    "        if (re.findall(r'^\\w', word)) == (re.findall(r'\\w$', word)):\n",
+    "            list.append(word)\n",
+    "    return list"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 762,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9969"
+      ]
+     },
+     "execution_count": 762,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#using base python\n",
+    "len(start_end_same(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 763,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9969"
+      ]
+     },
+     "execution_count": 763,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using regexp\n",
+    "len(start_end_same_reg(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 795,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How many words start and end with a vowel?\n",
+    "\n",
+    "def start_end_vowel(words):\n",
+    "    list = []\n",
+    "    for word in words:\n",
+    "        if (is_vowel(word[0]) == True) and (is_vowel(word[-1]) == True):\n",
+    "            list.append(word)\n",
+    "    return list\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 796,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def start_end_vowel_reg(words):\n",
+    "    list = []\n",
+    "    for word in words:\n",
+    "        if ((re.search(r'[aeiouAEIOU]', word[0]) != None) and (re.search(r'[aeiouAEIOU]', word[-1]) != None)):\n",
+    "            list.append(word)\n",
+    "    return list\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 798,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14667"
+      ]
+     },
+     "execution_count": 798,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using base python\n",
+    "len(start_end_vowel(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 799,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14667"
+      ]
+     },
+     "execution_count": 799,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# using regex\n",
+    "len(start_end_vowel_reg(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 814,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#How many words contain the same letter 3 times in a row?\n",
+    "#What other interesting patterns in words can you find?\n",
+    "\n",
+    "def same_3letter(word):\n",
+    "    list = []\n",
+    "    for word in words:\n",
+    "        if re.search(r'(\\w)\\1{2,}', word) != None:\n",
+    "            list.append(word)\n",
+    "    return list            "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 815,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bossship',\n",
+       " 'demigoddessship',\n",
+       " 'goddessship',\n",
+       " 'headmistressship',\n",
+       " 'patronessship',\n",
+       " 'wallless',\n",
+       " 'whenceeer']"
+      ]
+     },
+     "execution_count": 815,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "same_3letter(word)"
+   ]
   },
   {
    "cell_type": "code",
