--- a/regex-2.ipynb
+++ b/regex-2.ipynb
@@ -111,6 +111,179 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Write a regular expression to capture phone numbers. It should match all of the following:\n",
+    "\n",
+    "\n",
+    "(210) 867 5309  \n",
+    "+1 210.867.5309  \n",
+    "867-5309  \n",
+    "210-867-5309"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['210.867.5309']"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ph = '+1 210.867.5309'\n",
+    "re.findall(r'\\+?\\d?\\d?\\d?\\D?[\\s?\\-?\\.?]\\d{3}[\\s?\\-?\\.?]\\d{4}', ph)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['(210) 867 5309']"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ph = '(210) 867 5309'\n",
+    "re.findall(r'[\\(]?\\+?\\d?\\d?\\d?\\D?[\\s?\\-?\\.?]\\d{3}[\\s?\\-?\\.?]\\d{4}', ph)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['867-5309']"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ph = '867-5309'\n",
+    "match = re.findall(r'[\\(]?\\+?\\d?\\d?\\d?\\D*?[\\s?-?.?]?\\d{3}[\\s.-]\\d{4}$', ph)\n",
+    "match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['210-867-5309']"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "ph = '210-867-5309'\n",
+    "match = re.findall(r'[\\(]?\\+?\\d?\\d?\\d?\\D*?[\\s?-?.?]?\\d{3}[\\s.-]\\d{4}$', ph)\n",
+    "match"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['H',\n",
+       " 's',\n",
+       " '2',\n",
+       " '0',\n",
+       " 'y',\n",
+       " 'r',\n",
+       " 's',\n",
+       " 'n',\n",
+       " 'd',\n",
+       " '3',\n",
+       " 'm',\n",
+       " 'n',\n",
+       " 't',\n",
+       " 'h',\n",
+       " 's',\n",
+       " 'l',\n",
+       " 'd']"
+      ]
+     },
+     "execution_count": 87,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "string1 = 'He is 20 years and 3 months old'\n",
+    "re.findall(r'[^aeiou\\s]',string1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Use regular expressions to convert the dates below to the standardized year-month-day format.\n",
+    "\n",
+    "02/04/19  \n",
+    "02/05/19  \n",
+    "02/06/19  \n",
+    "02/07/19  \n",
+    "02/08/19  \n",
+    "02/09/19  \n",
+    "02/10/19"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'19/02/04'"
+      ]
+     },
+     "execution_count": 97,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "date = '02/04/19'\n",
+    "formatted_date = re.sub(r'(\\d{2})/(\\d{2})/(\\d{2})', r'\\3/\\1/\\2', date)\n",
+    "formatted_date "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
