--- a/regex-2.ipynb
+++ b/regex-2.ipynb
@@ -372,7 +372,9 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -436,6 +438,79 @@
    ],
    "source": [
     "len(count_vowels_regex(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How many words have at least 3 vowels in a row?\n",
+    "\n",
+    "def vowels_3_inrow(words):\n",
+    "    list1 = []\n",
+    "    for word in words:\n",
+    "        if re.search(r'[aeiouAEiou]{3}', word) != None:\n",
+    "            list1.append(word)\n",
+    "    return list1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "6180"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(vowels_3_inrow(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How many words have at least 4 consonants in a row?\n",
+    "\n",
+    "def consonants_4_inrow(words):\n",
+    "    list1 = []\n",
+    "    for word in words:\n",
+    "        if re.search(r'[^aeiouAEIOU]{4,}', word) != None:\n",
+    "            list1.append(word)\n",
+    "    return list1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "19241"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(consonants_4_inrow(words))"
    ]
   },
   {
