--- a/regex-2.ipynb
+++ b/regex-2.ipynb
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -511,6 +511,81 @@
    ],
    "source": [
     "len(consonants_4_inrow(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How many words start and end with the same letter?\n",
+    "\n",
+    "def same_letter(words):\n",
+    "    list1 = []\n",
+    "    for word in words:\n",
+    "        if (re.findall(r'^[\\w]', word)) ==  (re.findall(r'\\w$', word)):\n",
+    "            list1.append(word)\n",
+    "    return list1\n",
+    "    \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "9969"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(same_letter(words))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How many words start and end with a vowel?\n",
+    "\n",
+    "def start_end_vowel(words):\n",
+    "    list1 = []\n",
+    "    for word in words:\n",
+    "        if ((is_vowel(word[0]) == True) and ((is_vowel(word[-1]) == True))):\n",
+    "            list1.append(word)\n",
+    "    return list1\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "14667"
+      ]
+     },
+     "execution_count": 88,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(start_end_vowel(words))"
    ]
   },
   {
