--- a/regex-2.ipynb
+++ b/regex-2.ipynb
@@ -590,6 +590,48 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 94,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# How many words contain the same letter 3 times in a row?\n",
+    "\n",
+    "def same_three_letter(words):\n",
+    "    list1 = []\n",
+    "    for word in words:\n",
+    "        if re.search(r'(\\w)\\1{2,}', word):\n",
+    "            list1.append(word)\n",
+    "    return list1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['bossship',\n",
+       " 'demigoddessship',\n",
+       " 'goddessship',\n",
+       " 'headmistressship',\n",
+       " 'patronessship',\n",
+       " 'wallless',\n",
+       " 'whenceeer']"
+      ]
+     },
+     "execution_count": 95,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "same_three_letter(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
