--- a/acquire-2.ipynb
+++ b/acquire-2.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 87,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,7 +10,8 @@
     "from bs4 import BeautifulSoup\n",
     "import os\n",
     "import acquire\n",
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import re"
    ]
   },
   {
@@ -516,6 +517,126 @@
    ],
    "source": [
     "soup.find_all(attrs = {'itemprop': 'articleBody'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "url = 'https://inshorts.com/en/read/business'\n",
+    "def get_articles(url):\n",
+    "    response = get(url)\n",
+    "    soup = BeautifulSoup(response.content, 'html.parser')\n",
+    "    headlines = soup.find_all(attrs = {'itemprop': 'headline'})\n",
+    "    body = soup.find_all(attrs = {'itemprop': 'articleBody'})\n",
+    "    category = re.search(r'([^\\/]+$)', url)[0]\n",
+    "    \n",
+    "    for i in range(len(headlines)):\n",
+    "        headlines[i] = headlines[i].text\n",
+    "        \n",
+    "    for i in range(len(body)):\n",
+    "        body[i] = body[i].text\n",
+    "        \n",
+    "    category = [category] * len(body)\n",
+    "    \n",
+    "    list = []\n",
+    "    for i in range (0, len(headlines)):\n",
+    "        list.append({'title': headlines[i], 'content': body[i], 'category': category[i]})\n",
+    "    return list\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[{'title': \"Father said 'if you want to blow money up, fine' as I put $250M on vaccine: Adar\",\n",
+       "  'content': 'Serum Institute of India\\'s (SII) CEO Adar Poonawalla revealed that his father Cyrus S Poonawalla told him, \"Look, it\\'s your money. If you want to blow it up, fine,\" as he put $250 million in ramping up COVID-19 vaccine manufacturing capacity. Adar told The Washington Post, \"I decided to go all out.\" His father founded SII in 1966.',\n",
+       "  'category': 'business'},\n",
+       " {'title': \"Scientist behind '90% effective' COVID-19 vaccine says it can end the pandemic\",\n",
+       "  'content': 'German scientist Uğur Şahin, the CEO of BioNTech which co-developed a coronavirus vaccine with Pfizer, said he\\'s confident his product can end the pandemic and \"bash the virus over the head.\" The vaccine is 90% effective based on initial data from a late-stage trial. \"I believe that even protection only from symptomatic infections will have a dramatic effect,\" Şahin said.',\n",
+       "  'category': 'business'},\n",
+       " {'title': 'Russian vaccine arrives in India, video of it being unloaded from truck surfaces',\n",
+       "  'content': \"Russia's coronavirus vaccine, Sputnik V, has arrived in India after Dr Reddy's Laboratories got approval to conduct late-stage trials of the vaccine in the country. A video has surfaced on social media, which shows containers with logos of Dr Reddy's and Sputnik V being unloaded from a small truck. Based on interim results, Russia claimed the vaccine is 92% effective.\",\n",
+       "  'category': 'business'},\n",
+       " {'title': 'China suspends fish imports from Indian firm after coronavirus detected',\n",
+       "  'content': \"China has suspended imports from India's Basu International for one week after detecting the novel coronavirus on three samples taken from the outer packaging of frozen cuttlefish. Imports will resume automatically after one week, Chinese customs said. Companies from Brazil, Russia, Ecuador and Indonesia have also faced similar one-week suspensions during the last month.\",\n",
+       "  'category': 'business'},\n",
+       " {'title': 'Special Indian version of PUBG Mobile to be launched, announces developer',\n",
+       "  'content': \"South Korea's PUBG Corporation on Thursday announced that it is preparing to launch 'PUBG Mobile India', which has been specially created for India.  Additionally, the company said it plans to make investments worth $100 million in India. It will also create an Indian subsidiary which will hire over 100 employees specialising in business, esports and game development. \",\n",
+       "  'category': 'business'},\n",
+       " {'title': \"Ambani's RIL to invest up to $50 mn in Bill Gates' Breakthrough Energy Ventures\",\n",
+       "  'content': \"India's richest man Mukesh Ambani's RIL has announced an investment of up to $50 million in US-based coalition Breakthrough Energy's clean energy fund, Breakthrough Energy Ventures. Founded by world's second-richest man Bill Gates, Breakthrough Energy is a group of HNIs to fund clean energy companies. The $50 million investment constitutes 5.75% of the size of the fund contemplated at present.\",\n",
+       "  'category': 'business'},\n",
+       " {'title': \"China's Alibaba records $74 billion sales in 11-day Singles' Day sale\",\n",
+       "  'content': \"Chinese billionaire Jack Ma's Alibaba on Thursday announced it recorded $74.1 billion in sales during its 11-day Singles' Day sales amid COVID-19. It brought sellers on Alibaba 21 times as many orders by value as Amazon's two-day global Prime Day last month. Singles' Day, observed on November 11 in China, is a holiday that celebrates people who aren't in relationships. \",\n",
+       "  'category': 'business'},\n",
+       " {'title': 'Retail inflation in October rises to 7.61%, highest in over 6 years',\n",
+       "  'content': \"The country's retail inflation, measured by the Consumer Price Index (CPI), stood at 7.61% in the month of October compared to 7.27% in September, government data showed on Thursday. The 7.61% figure for retail inflation is the highest since May 2014 as prices of vegetables and pulses soared. Inflation in food and beverages rose to 10.16% in October.\",\n",
+       "  'category': 'business'},\n",
+       " {'title': 'Atmanirbhar Bharat Rozgar Yojana launched to incentivise job creation by firms',\n",
+       "  'content': 'Finance Minister Nirmala Sithamaran on Thursday launched the Atmanirbhar Bharat Rozgar Yojana to incentivise job creation during the COVID-19 recovery phase. This is eligible for EPFO-registered companies hiring workers at monthly wages less than ₹15,000. For firms with up to 1000 employees, the government will pay employee’s and employer’s contribution to EPF of 12% each for two years.',\n",
+       "  'category': 'business'},\n",
+       " {'title': 'Sitharaman announces some income tax relief for homebuyers and developers',\n",
+       "  'content': 'To provide income tax relief to homebuyers and developers, Finance Minister Nirmala Sitharaman has allowed a 20% differential between the circle rate and agreement value under Section 43CA of Income Tax Act. This would be applicable only on primary sale of residential units worth up to ₹2 crore till June 30, 2021. Till now, a differential of 10% was allowed.',\n",
+       "  'category': 'business'},\n",
+       " {'title': 'Goldman Sachs upgrades Indian stocks, raises Nifty target',\n",
+       "  'content': \"Goldman Sachs has upgraded Indian equities to 'overweight' on hopes of a rebound in corporate earnings. The American investment bank has raised its Nifty target to 14,100 by end-2021, implying an 11% upside from the current levels. Notably, Goldman had downgraded India to 'marketweight' in April expecting a significant contraction in economic activity and a delayed recovery.\",\n",
+       "  'category': 'business'},\n",
+       " {'title': 'Existing ₹3 lakh crore ECLGS extended till March 2021',\n",
+       "  'content': 'Finance Minister Nirmala Sitharaman has extended the existing ₹3 lakh crore Emergency Credit Line Guarantee Scheme (ECLGS) to March 31, 2021 as part of Atmanirbhar Bharat 3.0. The fully guaranteed, collateral-free scheme offers additional credit up to 20% of outstanding loans. Credit guarantee support will now be provided to 26 stressed sectors identified by Kamath Committee plus healthcare.',\n",
+       "  'category': 'business'},\n",
+       " {'title': \"Moody's revises India's 2020 GDP forecast to -8.9% from -9.6%\",\n",
+       "  'content': \"Global ratings agency Moody's revised India's GDP growth forecast for calendar year (CY) 2020 to a -8.9% contraction from its earlier estimate of a -9.6% contraction. Finance Minister Nirmala Sitharaman today cited the revision as a sign of economic recovery. Moody's also revised the GDP forecast for CY21 upwards to 8.6% from 8.1% projected earlier.\",\n",
+       "  'category': 'business'},\n",
+       " {'title': \"India's October fuel demand marks first yearly gain in 8 months\",\n",
+       "  'content': \"India's fuel demand in October marked its first year-on-year increase since February as diesel consumption rose to pre-COVID-19 levels ahead of the festive season. Demand for refined fuels rose 2.5% year-on-year in October to 17.77 million tonnes, government data showed. While the demand for diesel rose 7.4% year-on-year to 6.5 million tonnes, petrol sales rose 4.5% to 2.54 million tonnes.\",\n",
+       "  'category': 'business'},\n",
+       " {'title': 'NPCI to moderate onboarding of users if apps reach 30% UPI cap: Report',\n",
+       "  'content': 'The National Payments Corporation of India (NPCI) could moderate the onboarding of new users to enforce its 30% cap on the total volume of UPI transactions through third-party apps, ET reported. It could also mandate banks operating as payment service providers to third-party apps such as Google Pay to monitor their market share and report to NPCI, the report added.',\n",
+       "  'category': 'business'},\n",
+       " {'title': 'Singapore launches special work visa for technology executives ',\n",
+       "  'content': \"Singapore has announced a work visa called Tech.Pass for technology firms executives. Under the programme launching in January, up to 500 executives can apply for two-year visas which will allow them to operate a business, invest in or become a director in Singapore-based companies, and mentor startups. Employees with previous monthly salary of $20,000 and five years' experience can apply.\",\n",
+       "  'category': 'business'},\n",
+       " {'title': \"Nissan's $95 mn lawsuit against ex-chief Ghosn begins in Japan\",\n",
+       "  'content': \"A civil court trial began in Japan's Yokohama on Friday against former Nissan Chairman Carlos Ghosn, where Nissan is seeking $95 million in damages. The automaker has sued Ghosn for the harm and financial losses incurred by the company due to his misconduct. Ghosn, who was arrested in 2018 in Japan, fled to Lebanon while he was awaiting trial.\",\n",
+       "  'category': 'business'},\n",
+       " {'title': 'Finance Ministry seeks suggestions for Budget 2021-22 via email',\n",
+       "  'content': 'The Finance Ministry has said it will be creating a dedicated email ID to receive suggestions from institutions and experts on the Union Budget 2021-22, instead of physical consultations, in view of COVID-19. The MyGov portal will provide a platform to receive ideas from public from November 15-30, it added. The suggestions will be examined by the concerned ministries. ',\n",
+       "  'category': 'business'},\n",
+       " {'title': 'FM Sitharaman announces ₹65,000 cr fertiliser subsidy for farmers',\n",
+       "  'content': 'Finance Minister Nirmala Sitharaman on Thursday announced a ₹65,000 crore fertiliser subsidy for farmers as part of the new ₹2.65 lakh crore stimulus package. The subsidy is being provided to ensure adequate availability and timely accessibility of fertilisers to farmers, the FM said. An additional ₹10,000 crore will be provided for PM Garib Kalyan Rozgar Yojana in FY21, she added.',\n",
+       "  'category': 'business'},\n",
+       " {'title': 'Provided total stimulus package of ₹29.87 lakh cr or 15% of GDP: FM',\n",
+       "  'content': 'The Centre and RBI have together provided a total fiscal stimulus package of ₹29.87 lakh crore since COVID-19 pandemic began and the amount is 15% of GDP, Finance Minister Nirmala Sitharaman said. Earlier on Thursday, Sitharaman unveiled a ₹2.65 lakh crore stimulus package, which included a ₹1.46 lakh crore Production-Linked Incentive scheme for 10 sectors already approved by the government.',\n",
+       "  'category': 'business'},\n",
+       " {'title': 'Amazon not shareholder, no say in our affairs: Future Retail to Delhi HC',\n",
+       "  'content': 'Future Retail on Thursday told the Delhi High Court that Amazon \"isn\\'t even a minority shareholder\" and has no say in its affairs. The Singapore International Arbitration Centre\\'s (SIAC) order barring Future Retail from selling its assets to Reliance Industries is of no value, it added. The deal is needed to \"rescue Future Retail from bankruptcy\", the company\\'s counsel said.',\n",
+       "  'category': 'business'},\n",
+       " {'title': \"Rana Kapoor's daughter granted bail in Yes Bank fraud case\",\n",
+       "  'content': \"A magistrate court has granted bail to Yes Bank Founder Rana Kapoor's daughter Roshni Kapoor, an accused in the fraud case linked to Dewan Housing Finance (DHFL). Roshni, who is one of the eight accused, was summoned by the court last month in the case. The CBI had alleged that Yes Bank invested ₹3,700 crore in short-term debentures in DHFL.\",\n",
+       "  'category': 'business'},\n",
+       " {'title': \"Patanjali's net profit jumps 21.56% to ₹424.7 crore in 2019-20\",\n",
+       "  'content': 'Baba Ramdev-led Patanjali Ayurved reported a 21.56% increase in net profit at ₹424.72 crore for 2019-20, according to data provided by Tofler. The company had posted a net profit of ₹349.37 crore for 2018-19. Its revenue from operations rose 5.86% to ₹9,022.71 crore as against ₹8,522.68 crore in the year-ago period while its expenses jumped 5.34% to ₹8,521 crore.',\n",
+       "  'category': 'business'},\n",
+       " {'title': 'MM Murugappan steps down as chairman of 3 Murugappa Group firms',\n",
+       "  'content': \"MM Murugappan has stepped down as the chairman and director of three listed companies of the ₹38,105-crore Murugappa Group as he turned 65 years old. The board of directors of Cholamandalam Investment and Finance Company (Chola) elected Vellayan Subbiah as the Chairman with effect from November 12. Coromandel International's board of directors elected A Vellayan as their Chairman.\",\n",
+       "  'category': 'business'}]"
+      ]
+     },
+     "execution_count": 93,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "get_articles(url)"
    ]
   },
   {
